@@ -11654,6 +11654,11 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
         </listitem>
 
         <listitem>
+          <para>Fix: now properly removing ActivitySet's Pools, Artifacts and
+          Associations when deleting their WorkflowProcess container </para>
+        </listitem>
+
+        <listitem>
           <para>Shark mode:</para>
 
           <para>- Support for new extended attribute
