@@ -2,6 +2,7 @@
 2016-07-25 Sasa Bojanic <sasaboy@together.at>
    # External package relative path references on windows are now written using "/" character as file separator so 
      XPDL with external packages can be used cross-platform
+   # Fix: now properly removing ActivitySet's Pools, Artifacts and Associations when deleting their WorkflowProcess container 
    
 2016-07-25 Sasa Bojanic <sasaboy@together.at>
    # Shark mode: SharkDisplayGenerator differently present WorkflowProcess name in GUI (category variable value information is appended)
